Chore: Upgrade Rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,8 +2,11 @@
 
 inherit_from:
   - '.rubocop_core.yml'
+  - '.rubocop_capybara.yml'
+  - '.rubocop_factory_bot.yml'
   - '.rubocop_performance.yml'
   - '.rubocop_rspec.yml'
   - '.rubocop_local.yml'
+  - '.rubocop_thread_safety.yml'
 
 # Put your project-specific Rubocop configuration in .rubocop_local.yml
