--- a/.rubocop_local.yml
+++ b/.rubocop_local.yml
@@ -49,6 +49,9 @@ Style/OptionHash:
 Style/SafeNavigation:
   Enabled: false
 
+Style/SendWithLiteralMethodName:
+  Enabled: false
+
 Style/SlicingWithRange:
   Enabled: false
 
