--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on:                      "ubuntu-latest"
 
     strategy:
+      fail-fast:                  false
+
       matrix:
         ruby:
           - "2.1"
@@ -24,6 +26,8 @@ jobs:
           - "3.0"
           - "3.1"
           - "3.2"
+          - "3.3"
+          - "3.4"
           - "ruby-head"
         include:
           - ruby:                 "2.1"
@@ -32,10 +36,43 @@ jobs:
           - ruby:                 "2.2"
             bundler:              "1"
 
+          - ruby:                 "2.3"
+            bundler:              "2.3"
+
+          - ruby:                 "2.4"
+            bundler:              "2.3"
+
+          - ruby:                 "2.5"
+            bundler:              "2.3"
+
+          - ruby:                 "2.6"
+            bundler:              "2.4"
+
+          - ruby:                 "2.7"
+            bundler:              "2.4"
+
+          - ruby:                 "3.0"
+            bundler:              "2.4"
+
+          - ruby:                 "3.1"
+            bundler:              "2.4"
+
+          - ruby:                 "3.2"
+            bundler:              "2.7"
+
+          - ruby:                 "3.3"
+            bundler:              "2.7"
+
+          - ruby:                 "3.4"
+            bundler:              "4.0"
+
+          - ruby:                 "ruby-head"
+            bundler:              "4.0"
+
     continue-on-error: ${{ endsWith(matrix.ruby, 'head') }}
 
     env:
-      BUNDLE_GEMFILE:             "./gemfiles/v${{ matrix.bundler || '2' }}/Gemfile"
+      BUNDLE_GEMFILE:             "./gemfiles/v${{ matrix.bundler }}/Gemfile"
 
     steps:
       - name:                     "Checkout Code"
@@ -48,7 +85,7 @@ jobs:
         uses:                     "ruby/setup-ruby@v1"
         with:
           ruby-version:           "${{ matrix.ruby }}"
-          bundler:                "${{ matrix.bundler || 2 }}"
+          bundler:                "${{ matrix.bundler }}"
           bundler-cache:          true
 
       - name:                     "Run RSpec"
